Update the get_batches function to add padding to the english sentences as well.

--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cuda:0\n"
+      "Device: cpu\n"
      ]
     }
    ],
@@ -20,9 +20,9 @@
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "\n",
-    "from torchtext.datasets import TranslationDataset, Multi30k\n",
-    "from torchtext.data import Field, BucketIterator\n",
-    "import spacy\n",
+    "# from torchtext.datasets import TranslationDataset, Multi30k\n",
+    "# from torchtext.data import Field, BucketIterator\n",
+    "# import spacy\n",
     "\n",
     "import pickle\n",
     "import random\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,17 +124,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(german['train'])):\n",
-    "    german['train'][i] = torch.LongTensor(german['train'][i]).cuda()\n",
-    "    english['train'][i] = torch.LongTensor(english['train'][i]).cuda()\n",
+    "    german['train'][i] = torch.LongTensor(german['train'][i]).to(device)\n",
+    "    english['train'][i] = torch.LongTensor(english['train'][i]).to(device)\n",
     "    \n",
     "for i in range(len(german['dev'])):\n",
-    "    german['dev'][i] = torch.LongTensor(german['dev'][i]).cuda()\n",
-    "    english['dev'][i] = torch.LongTensor(english['dev'][i]).cuda()"
+    "    german['dev'][i] = torch.LongTensor(german['dev'][i]).to(device)\n",
+    "    english['dev'][i] = torch.LongTensor(english['dev'][i]).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  2, 865,  11,   3])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "german['dev'][0]"
    ]
   },
   {
@@ -169,10 +189,10 @@
     "     [2, 84, 21, 3]]\n",
     "```\n",
     "\n",
-    "- Now we have a batch of dimension: $N x D$, where:\n",
+    "- Now we have a batch of dimension: $N x L$, where:\n",
     "    - $N$ is the number of sentences in the batch, and \n",
-    "    - $D$ is the dimensionality (number of words) within a sentence.\n",
-    "    - It is important to note that the $N$ and $D$ values will vary from batch to batch, but **MUST** be consistent within each batch"
+    "    - $L$ is the dimensionality (number of words) within a sentence.\n",
+    "    - It is important to note that the $N$ and $L$ values will vary from batch to batch, but **MUST** be consistent within each batch"
    ]
   },
   {
@@ -233,36 +253,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([  2, 865,   3], device='cuda:0')\n",
-      "y tensor([0], device='cuda:0')\n",
-      "x tensor([  2, 865,   3,   0], device='cuda:0')\n",
-      "tensor([  2, 865,   3], device='cuda:0')\n"
-     ]
-    }
-   ],
-   "source": [
-    "def test(x):\n",
-    "    y = [0]\n",
-    "    y = torch.as_tensor(y).cuda()\n",
-    "    print('y', y)\n",
-    "    x = torch.cat((x, y), dim=0)\n",
-    "    print('x', x)\n",
-    "    \n",
-    "    \n",
-    "print(german['train'][0])\n",
-    "test(german['train'][0])\n",
-    "print(german['train'][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [
@@ -303,6 +293,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "# THE FOLLOWING FUNCTION IS DEPRECATED\n",
+    "\n",
+    "\n",
     "def get_batches(german, english, b_sz):\n",
     "    de_batches = [[]]\n",
     "    \n",
@@ -359,12 +353,13 @@
     "\n",
     "# print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
     "# print(\"Source:\", test_batches[102][3]['source'])\n",
-    "# print(\"Target:\", test_batches[102][3]['target'])"
+    "# print(\"Target:\", test_batches[102][3]['target'])\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -372,19 +367,8 @@
      "output_type": "stream",
      "text": [
       "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
-      "Source: tensor([  2, 864, 576,  11,   3], device='cuda:0')\n",
-      "Target: tensor([   2, 3144,  131,  624,   11,    3], device='cuda:0')\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-228fc120f5d1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Target:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_batches\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m102\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'target'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_batches\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m102\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'shape'"
+      "Source: tensor([   2,  814,  895, 3180,    3])\n",
+      "Target: tensor([   2,   63,  757, 2587,    3,    0,    0,    0])\n"
      ]
     }
    ],
@@ -415,10 +399,11 @@
     "            dif = max_len - len(sent)\n",
     "            if dif > 0:\n",
     "                pad_list = [0] * dif\n",
-    "                pad_list = torch.as_tensor(pad_list).cuda()\n",
+    "                pad_list = torch.as_tensor(pad_list).to(device)\n",
     "                sent.data = torch.cat((sent,pad_list), dim=0)\n",
-    "#                 sent.data = x.clone()\n",
     "\n",
+    "    # Within each batch, load the english sentence that corresponds to each\n",
+    "    # german sentence within that batch to a new english batch.\n",
     "    en_batches = []\n",
     "    k=0\n",
     "    for i in range(len(de_batches)):\n",
@@ -426,9 +411,26 @@
     "        for j in range(len(de_batches[i])):\n",
     "            tmp_batch[j] = english[k]\n",
     "            k+=1\n",
-    "            \n",
     "        en_batches.append(tmp_batch)\n",
     "        \n",
+    "    # Within each english batch, pad all the sentences to be the same length as the \n",
+    "    # maximum sentence within that batch.\n",
+    "    for b in en_batches:\n",
+    "        max_len = len(max(b, key=len))\n",
+    "        \n",
+    "        for sent in b:\n",
+    "            dif = max_len - len(sent)\n",
+    "            if dif > 0:\n",
+    "                pad_list = [0] * dif\n",
+    "                pad_list = torch.as_tensor(pad_list).to(device)\n",
+    "                sent.data = torch.cat((sent,pad_list), dim=0)\n",
+    "        \n",
+    "    # Define the batches list, which contains an index for each batch. Within each index\n",
+    "    # of the batches list is a batch. Each batch is of length N (number of sentences), \n",
+    "    # Each index (0..N) within the batch is a dictionary containing the source and target\n",
+    "    # sentence. Therefore, the batches list is a list of lists (essentially a 2D array), \n",
+    "    # where each element in the list of lists/array is a dictionary containing the source\n",
+    "    # and target tensor.\n",
     "    batches = []\n",
     "    for i in range(len(de_batches)):\n",
     "        dict_batch = []\n",
@@ -561,19 +563,6 @@
     "    batches = get_batches()\n",
     "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def batchify():\n",
-    "    \n",
-    "    return\n",
-    "\n",
-    "batchify()"
-   ]
   }
  ],
  "metadata": {
@@ -592,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
