Implementation of the batchify() function which turns the batch into a tensor ready for input to the model

--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -451,6 +451,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(x):\n",
+    "    y = [0]\n",
+    "    y = torch.as_tensor(y).cuda()\n",
+    "    print('y', y)\n",
+    "    x = torch.cat((x, y), dim=0)\n",
+    "    print('x', x)\n",
+    "    \n",
+    "    \n",
+    "print(german['train'][0])\n",
+    "test(german['train'][0])\n",
+    "print(german['train'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This function is used to retrieve the tensors for individual batches. The batchify() function will be used within the training loop "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batchify(batch): # We need the batches to be of shape [sentence length, batch size]\n",
+    "    source_sent_len = (len(batch[0]['source']))\n",
+    "    target_sent_len = (len(batch[0]['target']))\n",
+    "    batch_size = (len(batch))\n",
+    "    \n",
+    "    source = torch.empty((source_sent_len, batch_size)).int().to(device)    \n",
+    "    target = torch.empty((target_sent_len, batch_size)).int().to(device)\n",
+    "    \n",
+    "    for i in range(len(batch)):\n",
+    "        source[:,i] = batch[i]['source']\n",
+    "        target[:,i] = batch[i]['target']\n",
+    "    \n",
+    "    return source, target\n",
+    "\n",
+    "# Example:\n",
+    "tr_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "\n",
+    "for b in tr_batches: # TRAINING LOOP\n",
+    "    source, target = batchify(b) # returns the source and target tensors that are in the correct \n",
+    "                                 # shape to push through the model."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
