Deprecate previous get_batches functions, and clean up of the notebook

--- a/Evan Playground.ipynb
+++ b/Evan Playground.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n"
+      "Device: cuda:0\n"
      ]
     }
    ],
@@ -44,87 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'data/'\n",
     "\n",
-    "with open(path + 'english_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open(path + 'english_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
     "    english = pickle.load(handle)\n",
     "    \n",
-    "with open(path + 'german_no_pad_sorted_50k.pickle', 'rb') as handle:\n",
+    "with open(path + 'german_no_pad_sorted_5k.pickle', 'rb') as handle:\n",
     "    german = pickle.load(handle)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spacy_de = spacy.load('de')\n",
-    "spacy_en = spacy.load('en')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_de(text):\n",
-    "    \"\"\"\n",
-    "    Tokenizes German text from a string into a list of strings (tokens) and reverses it\n",
-    "    \"\"\"\n",
-    "    return [tok.text for tok in spacy_de.tokenizer(text)][::-1]\n",
-    "\n",
-    "def tokenize_en(text):\n",
-    "    \"\"\"\n",
-    "    Tokenizes English text from a string into a list of strings (tokens)\n",
-    "    \"\"\"\n",
-    "    return [tok.text for tok in spacy_en.tokenizer(text)]\n",
-    "\n",
-    "SRC = Field(tokenize = tokenize_de, \n",
-    "            init_token = '<sos>', \n",
-    "            eos_token = '<eos>', \n",
-    "            lower = True)\n",
-    "\n",
-    "TRG = Field(tokenize = tokenize_en, \n",
-    "            init_token = '<sos>', \n",
-    "            eos_token = '<eos>', \n",
-    "            lower = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x,y,z = Multi30k.splits(exts=('.de', '.en'), fields=(SRC, TRG))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<torchtext.data.example.Example object at 0x00000266D0D69978>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x.examples[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,26 +70,6 @@
     "for i in range(len(german['dev'])):\n",
     "    german['dev'][i] = torch.LongTensor(german['dev'][i]).to(device)\n",
     "    english['dev'][i] = torch.LongTensor(english['dev'][i]).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([  2, 865,  11,   3])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "german['dev'][0]"
    ]
   },
   {
@@ -197,181 +112,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n# THE FOLLOWING FUNCTION IS DEPRECATED\\n\\ndef get_batches(german, english, b_sz):\\n    batches = [[]]\\n    \\n    # For every sentence in the dataset, add it to a batch, based on the batch size\\n    # if the sentence + current length is not greater than the batch size, \\n    # then add it to the batch otherwise fill the current batch\\n    for sent in german:\\n        cur_len = 0\\n        for b in batches[-1]:\\n            cur_len += len(b)\\n    \\n        if (cur_len + len(sent)) <= b_sz: \\n            batches[-1].append(sent)\\n        else:\\n            batches.append([])        \\n            batches[-1].append(sent)\\n    \\n    # For every batch within the entire set of batches, add padding to the sentences\\n    # that are less than the length of the longest sentence within the each batch.\\n    for b in batches:\\n        max_len = len(max(b, key=len))\\n        \\n        for sent in b:\\n            dif = max_len - len(sent)\\n            if dif > 0:\\n                pad_list = 0 * dif\\n                sent.append(pad_list)\\n        \\n    return batches\\n\\n\\n\\nbatches = get_batches(german['train'], b_sz=20)\\n\""
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "# THE FOLLOWING FUNCTION IS DEPRECATED\n",
     "\n",
-    "def get_batches(german, english, b_sz):\n",
-    "    batches = [[]]\n",
+    "# # THE FOLLOWING FUNCTION IS DEPRECATED\n",
+    "\n",
+    "# def get_batches(german, english, b_sz):\n",
+    "#     batches = [[]]\n",
     "    \n",
-    "    # For every sentence in the dataset, add it to a batch, based on the batch size\n",
-    "    # if the sentence + current length is not greater than the batch size, \n",
-    "    # then add it to the batch otherwise fill the current batch\n",
-    "    for sent in german:\n",
-    "        cur_len = 0\n",
-    "        for b in batches[-1]:\n",
-    "            cur_len += len(b)\n",
+    "#     # For every sentence in the dataset, add it to a batch, based on the batch size\n",
+    "#     # if the sentence + current length is not greater than the batch size, \n",
+    "#     # then add it to the batch otherwise fill the current batch\n",
+    "#     for sent in german:\n",
+    "#         cur_len = 0\n",
+    "#         for b in batches[-1]:\n",
+    "#             cur_len += len(b)\n",
     "    \n",
-    "        if (cur_len + len(sent)) <= b_sz: \n",
-    "            batches[-1].append(sent)\n",
-    "        else:\n",
-    "            batches.append([])        \n",
-    "            batches[-1].append(sent)\n",
+    "#         if (cur_len + len(sent)) <= b_sz: \n",
+    "#             batches[-1].append(sent)\n",
+    "#         else:\n",
+    "#             batches.append([])        \n",
+    "#             batches[-1].append(sent)\n",
     "    \n",
-    "    # For every batch within the entire set of batches, add padding to the sentences\n",
-    "    # that are less than the length of the longest sentence within the each batch.\n",
-    "    for b in batches:\n",
-    "        max_len = len(max(b, key=len))\n",
+    "#     # For every batch within the entire set of batches, add padding to the sentences\n",
+    "#     # that are less than the length of the longest sentence within the each batch.\n",
+    "#     for b in batches:\n",
+    "#         max_len = len(max(b, key=len))\n",
     "        \n",
-    "        for sent in b:\n",
-    "            dif = max_len - len(sent)\n",
-    "            if dif > 0:\n",
-    "                pad_list = 0 * dif\n",
-    "                sent.append(pad_list)\n",
+    "#         for sent in b:\n",
+    "#             dif = max_len - len(sent)\n",
+    "#             if dif > 0:\n",
+    "#                 pad_list = 0 * dif\n",
+    "#                 sent.append(pad_list)\n",
     "        \n",
-    "    return batches\n",
+    "#     return batches\n",
     "\n",
     "\n",
     "\n",
-    "batches = get_batches(german['train'], b_sz=20)\n",
-    "\"\"\""
+    "# batches = get_batches(german['train'], b_sz=20)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 865, 3, 0]\n",
-      "[2, 865, 3, 0]\n",
-      "[2, 10408, 3, 0]\n",
-      "[2, 115146, 3, 0]\n",
-      "[2, 104464, 3, 0]\n",
-      "[2, 61543, 3, 0]\n",
-      "[2, 2858, 3, 0]\n",
-      "[2, 54951, 3, 0]\n",
-      "[2, 6944, 3, 0]\n",
-      "[2, 865, 3, 0]\n",
-      "[2, 865, 3, 0]\n",
-      "[2, 115146, 3, 0]\n",
-      "[2, 35921, 3, 0]\n",
-      "[2, 15689, 3, 0]\n",
-      "[2, 53131, 3, 0]\n",
-      "[2, 3481, 3, 0]\n",
-      "[2, 3211, 3, 0]\n",
-      "[2, 865, 3, 0]\n",
-      "[2, 3174, 3, 0]\n",
-      "[2, 865, 11, 3]\n",
-      "[2, 8403, 3180, 3]\n",
-      "[2, 83114, 11, 3]\n",
-      "[2, 865, 11, 3]\n",
-      "[2, 865, 11, 3]\n",
-      "[2, 865, 11, 3]\n",
-      "[2, 3550, 11, 3]\n",
-      "[2, 865, 11, 3]\n",
-      "[2, 2302, 11, 3]\n",
-      "[2, 865, 11, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "# THE FOLLOWING FUNCTION IS DEPRECATED\n",
+    "\n",
+    "# # THE FOLLOWING FUNCTION IS DEPRECATED\n",
     "\n",
     "\n",
-    "def get_batches(german, english, b_sz):\n",
-    "    de_batches = [[]]\n",
+    "# def get_batches(german, english, b_sz):\n",
+    "#     de_batches = [[]]\n",
     "    \n",
-    "    # For every sentence in the dataset, add it to a batch, based on the batch size\n",
-    "    # if the sentence + current length is not greater than the batch size, \n",
-    "    # then add it to the batch otherwise fill the current batch\n",
-    "    for sent in german:\n",
-    "        cur_len = 0\n",
-    "        for b in de_batches[-1]:\n",
-    "            cur_len += len(b)\n",
+    "#     # For every sentence in the dataset, add it to a batch, based on the batch size\n",
+    "#     # if the sentence + current length is not greater than the batch size, \n",
+    "#     # then add it to the batch otherwise fill the current batch\n",
+    "#     for sent in german:\n",
+    "#         cur_len = 0\n",
+    "#         for b in de_batches[-1]:\n",
+    "#             cur_len += len(b)\n",
     "    \n",
-    "        if (cur_len + len(sent)) <= b_sz: \n",
-    "            de_batches[-1].append(sent)\n",
-    "        else:\n",
-    "            de_batches.append([])        \n",
-    "            de_batches[-1].append(sent)\n",
+    "#         if (cur_len + len(sent)) <= b_sz: \n",
+    "#             de_batches[-1].append(sent)\n",
+    "#         else:\n",
+    "#             de_batches.append([])        \n",
+    "#             de_batches[-1].append(sent)\n",
     "    \n",
-    "    # For every batch within the entire set of batches, add padding to the sentences\n",
-    "    # that are less than the length of the longest sentence within the each batch.\n",
-    "    for b in de_batches:\n",
-    "        max_len = len(max(b, key=len))\n",
+    "#     # For every batch within the entire set of batches, add padding to the sentences\n",
+    "#     # that are less than the length of the longest sentence within the each batch.\n",
+    "#     for b in de_batches:\n",
+    "#         max_len = len(max(b, key=len))\n",
     "        \n",
-    "        for sent in b:\n",
-    "            dif = max_len - len(sent)\n",
-    "            if dif > 0:\n",
-    "                pad_list = 0 * dif\n",
-    "                sent.append(pad_list)\n",
+    "#         for sent in b:\n",
+    "#             dif = max_len - len(sent)\n",
+    "#             if dif > 0:\n",
+    "#                 pad_list = 0 * dif\n",
+    "#                 sent.append(pad_list)\n",
     "    \n",
-    "    en_batches = []\n",
-    "    k=0\n",
-    "    for i in range(len(de_batches)):\n",
-    "        tmp_batch = [0]*len(de_batches[i])\n",
-    "        for j in range(len(de_batches[i])):\n",
-    "            tmp_batch[j] = english[k]\n",
-    "            k+=1\n",
+    "#     en_batches = []\n",
+    "#     k=0\n",
+    "#     for i in range(len(de_batches)):\n",
+    "#         tmp_batch = [0]*len(de_batches[i])\n",
+    "#         for j in range(len(de_batches[i])):\n",
+    "#             tmp_batch[j] = english[k]\n",
+    "#             k+=1\n",
     "            \n",
-    "        en_batches.append(tmp_batch)\n",
+    "#         en_batches.append(tmp_batch)\n",
     "        \n",
-    "    batches = []\n",
-    "    for i in range(len(de_batches)):\n",
-    "        dict_batch = []\n",
-    "        for j in range(len(de_batches[i])):\n",
-    "            tmp_dict = {\"source\": de_batches[i][j],\n",
-    "                       \"target\": en_batches[i][j]}\n",
-    "            dict_batch.append(tmp_dict)\n",
-    "        batches.append(dict_batch)\n",
+    "#     batches = []\n",
+    "#     for i in range(len(de_batches)):\n",
+    "#         dict_batch = []\n",
+    "#         for j in range(len(de_batches[i])):\n",
+    "#             tmp_dict = {\"source\": de_batches[i][j],\n",
+    "#                        \"target\": en_batches[i][j]}\n",
+    "#             dict_batch.append(tmp_dict)\n",
+    "#         batches.append(dict_batch)\n",
     "        \n",
-    "    return batches\n",
+    "#     return batches\n",
     "\n",
-    "test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "# test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
     "\n",
-    "for i in range(len(test_batches[0])):\n",
-    "    print(test_batches[0][i]['source'])\n",
+    "# for i in range(len(test_batches[0])):\n",
+    "#     print(test_batches[0][i]['source'])\n",
     "\n",
-    "# print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
-    "# print(\"Source:\", test_batches[102][3]['source'])\n",
-    "# print(\"Target:\", test_batches[102][3]['target'])\n",
-    "\"\"\""
+    "# # print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
+    "# # print(\"Source:\", test_batches[102][3]['source'])\n",
+    "# # print(\"Target:\", test_batches[102][3]['target'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "load the source and target sentences of the 3rd sentence within the 102nd batch:\n",
-      "Source: tensor([   2,  814,  895, 3180,    3])\n",
-      "Target: tensor([   2,   63,  757, 2587,    3,    0,    0,    0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_batches(german, english, b_sz):\n",
     "    de_batches = [[]]\n",
@@ -442,30 +298,13 @@
     "        \n",
     "    return batches\n",
     "\n",
-    "test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "# print(len(get_batches(german['train'],english['train'],1000)))\n",
     "\n",
-    "print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
-    "print(\"Source:\", test_batches[102][3]['source'])\n",
-    "print(\"Target:\", test_batches[102][3]['target'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(x):\n",
-    "    y = [0]\n",
-    "    y = torch.as_tensor(y).cuda()\n",
-    "    print('y', y)\n",
-    "    x = torch.cat((x, y), dim=0)\n",
-    "    print('x', x)\n",
-    "    \n",
-    "    \n",
-    "print(german['train'][0])\n",
-    "test(german['train'][0])\n",
-    "print(german['train'][0])"
+    "# test_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "\n",
+    "# print(\"load the source and target sentences of the 3rd sentence within the 102nd batch:\")\n",
+    "# print(\"Source:\", test_batches[102][3]['source'])\n",
+    "# print(\"Target:\", test_batches[102][3]['target'])"
    ]
   },
   {
@@ -477,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,8 +325,8 @@
     "    target_sent_len = (len(batch[0]['target']))\n",
     "    batch_size = (len(batch))\n",
     "    \n",
-    "    source = torch.empty((source_sent_len, batch_size)).int().to(device)    \n",
-    "    target = torch.empty((target_sent_len, batch_size)).int().to(device)\n",
+    "    source = torch.empty((source_sent_len, batch_size)).long().to(device)    \n",
+    "    target = torch.empty((target_sent_len, batch_size)).long().to(device)\n",
     "    \n",
     "    for i in range(len(batch)):\n",
     "        source[:,i] = batch[i]['source']\n",
@@ -495,30 +334,23 @@
     "    \n",
     "    return source, target\n",
     "\n",
-    "# Example:\n",
-    "tr_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
     "\n",
-    "for b in tr_batches: # TRAINING LOOP\n",
-    "    source, target = batchify(b) # returns the source and target tensors that are in the correct \n",
-    "                                 # shape to push through the model."
+    "# # # Example:\n",
+    "# from time import time\n",
+    "# t0 = time()\n",
+    "# tr_batches = get_batches(german['train'], english['train'], b_sz=100)\n",
+    "# print(time()-t0)\n",
+    "\n",
+    "# for idx, b in enumerate(tr_batches): # TRAINING LOOP\n",
+    "#     source, target = batchify(b) # returns the source and target tensors that are in the correct \n",
+    "#                                  # shape to push through the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sos> damit löschen sie zeit . <eos> \n",
-      "<sos> so , in doing so , you 're erasing time . <eos> \n",
-      "<sos> aaa : danke schön . <eos> \n",
-      "<sos> aaa : thank you . <eos> \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_sentence(sent, language):\n",
     "    if language == \"german\":\n",
@@ -532,15 +364,15 @@
     "        \n",
     "    print(\"\")\n",
     "\n",
-    "print_sentence(test_batches[2984][0]['source'], language=\"german\")\n",
-    "print_sentence(test_batches[2984][0]['target'], language=\"english\")\n",
+    "# print_sentence(test_batches[2984][0]['source'], language=\"german\")\n",
+    "# print_sentence(test_batches[2984][0]['target'], language=\"english\")\n",
     "\n",
-    "del test_batches"
+    "# del test_batches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
